# Pt-manager-Back-End

./: LICENSE  README.md
Project_pt_manager-Front end/project_pt_manager_front_end/: .env
projeto_back_end/: .coverage  .env.example  .gitignore  Dockerfile  docker-compose.yml  render.yaml  requirements.txt
projeto_back_end/.github/workflows/: ci.yml
projeto_back_end/app/: main.py  scheduler.py
projeto_back_end/app/api/: deps.py
projeto_back_end/app/core/: config.py  db_errors.py  logging.py  (+1 more)
pt_manager/: .env.example  Dockerfile  Procfile  pyproject.toml  requirements.txt
pt_manager/alembic/: env.py
pt_manager/app/: main.py  scheduler.py
pt_manager/app/api/v1/: assessments.py  auth.py  clients.py  exercises.py  notifications.py  nutrition.py  packs.py  sessions.py  supplements.py  training_plans.py
pt_manager/app/core/: config.py  security.py
pt_manager/app/crud/: assessment.py  nutrition.py
pt_manager/app/db/: init_db.py  session.py
pt_manager/app/db/models/: assessment.py  client.py  nutrition.py  pack.py  session.py  supplement.py  trainer_subscription.py  training.py  user.py
pt_manager/app/schemas/: auth.py  client.py  nutrition.py  pack_types.py  subscription.py  training.py  training_session.py
pt_manager/app/services/: email_service.py  macro_calculator.py  notification_service.py  pack_service.py  session_service.py  stripe_service.py  subscription_service.py  whatsapp_service.py
pt_manager/app/utils/: time.py
pt_manager/tests/unit/: test_macro_calculator.py
pt_manager_back_end/: .env.example
pt_manager_back_end/app/: main.py
(+88 files in other folders)
